metadata/force-app/main/default/objects/CustomName_vDHuA__c/CustomName_vDHuA__c.object-meta.xml
<CustomObject>
    <description>Description_TKYdl</description>
    <label>CustomLabel_ZzTsm</label>
    <nameField>
        <label>CustomLabel_ZzTsm</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_ZzTsms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>