metadata/force-app/main/default/objects/CustomName_vDHuA__c/fields/CustomField_NJVHT__c.field-meta.xml
<CustomField>
    <fullName>CustomField_NJVHT__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldqUMEo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>